--- a/src/gui/movieView.fxml
+++ b/src/gui/movieView.fxml
@@ -16,7 +16,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <GridPane layoutY="27.0" prefHeight="371.0" prefWidth="175.0">
+                  <GridPane layoutY="27.0" prefHeight="398.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -55,8 +55,9 @@
                         <Label fx:id="labTotalUser" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
-                  <Button layoutX="325.0" layoutY="360.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="69.0" text="Edit" />
-                  <Button layoutX="246.0" layoutY="360.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="69.0" text="Add" />
+                  <Button layoutX="325.0" layoutY="360.0" mnemonicParsing="false" onAction="#btnHandleUpdateMovie" prefHeight="24.0" prefWidth="69.0" text="Edit" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="20.0" />
+                  <Button layoutX="246.0" layoutY="360.0" mnemonicParsing="false" onAction="#btnHandleAddMovie" prefHeight="24.0" prefWidth="69.0" text="Add" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="100.0" />
+                  <Button layoutX="175.0" layoutY="360.0" mnemonicParsing="false" onAction="#btnHandleRemove" prefHeight="24.0" prefWidth="69.0" text="Delete" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="180.0" />
                </children>
             </AnchorPane>
         </items>
